--- a/sample.service
+++ b/sample.service
@@ -5,9 +5,9 @@ Description=Sample Trader
 Type=simple
 User=ubuntu
 WorkingDirectory=/home/ubuntu/pycryptobot/
-ExecStart=nice -n 19 /usr/bin/python3.9 -u pycryptobot.py --config sample.config.json
+ExecStart=/usr/bin/python3.9 -u pycryptobot.py --config sample.config.json
 Restart=on-failure
-RestartSec=3s
+RestartSec=120s
 
 [Install]
 WantedBy=multi-user.target
